tests/NormalTests/paczka1/fuzzy1/94321191.err
Error in line 1: S248 S995 47,8
Error in line 9: S248 A623 4,2
Error in line 23: xvPyeW6 A623 77,6
Error in line 14: S248 S248 79,5
Error in line 29: QvEWgk S248 16,9
Error in line 35: h0rM4fLhX8a A537 69,6
